# BiPart

./: CMakeLists.txt  README.md
include/: Bipart.h  Metis.h
src/: Bipart.cpp  CMakeLists.txt  Coarsening.cpp  Metric.cpp  Partitioning.cpp  Refine.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
